--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,31 +15,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Log into docker
+      - name: Log into Docker Hub
         run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login --username 1mill --password-stdin
-      - run: docker build . --file Dockerfile --tag tmp-image
-      - run: docker tag tmp-image 1mill/terraform-sops:latest
-      - run: docker push 1mill/terraform-sops:latest
-
-
-      # - name: Push image
-      #   run: |
-      #     IMAGE_ID=docker.pkg.github.com/${{ github.repository }}/$IMAGE_NAME
-
-      #     # Change all uppercase to lowercase
-      #     IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-
-      #     # Strip git ref prefix from version
-      #     VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-
-      #     # Strip "v" prefix from tag name
-      #     [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
-
-      #     # Use Docker `latest` tag convention
-      #     [ "$VERSION" == "master" ] && VERSION=latest
-
-      #     echo IMAGE_ID=$IMAGE_ID
-      #     echo VERSION=$VERSION
-
-      #     docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
-      #     docker push $IMAGE_ID:$VERSION
+      - name: Build image
+        run: docker build . --file Dockerfile --tag tmp-image
+      - name: Generate version number
+        run: VERSION=`date +%Y-%m-%d_%H-%M-%S`
+      - name: Tag image
+        run: docker tag tmp-image 1mill/terraform-sops:${VERSION}
+      - name: Deploy image - versioned
+        run: docker push 1mill/terraform-sops:${VERSION}
+      - name: Deploy image - latest
+        run: docker push 1mill/terraform-sops:latest
