--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,15 +3,15 @@ name: CI
 on: [push]
 
 jobs:
-  # test:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - run: docker build . --file Dockerfile
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - run: docker build . --file Dockerfile
 
   deploy-to-production:
     if: endsWith(github.ref, 'master') == true
-    # needs: [test]
+    needs: [test]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -19,13 +19,3 @@ jobs:
         env:
           PASSWORD: "${{ secrets.DOCKERHUB_PASSWORD }}"
           USERNAME: 1mill
-      # - name: Log into Docker Hub
-      #   run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login --username 1mill --password-stdin
-      # - name: Build image
-      #   run: docker build . --file Dockerfile --tag tmp-image
-      # - name: Tag image
-      #   run: docker tag tmp-image 1mill/terraform-sops:${VERSION}
-      # - name: Deploy image - versioned
-      #   run: docker push 1mill/terraform-sops:${VERSION}
-      # - name: Deploy image - latest
-      #   run: docker push 1mill/terraform-sops:latest
