--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,4 @@ jobs:
       - run: bash ./ci-deploy.bash
         env:
           PASSWORD: "${{ secrets.DOCKERHUB_PASSWORD }}"
-          USERNAME: 1mill
+          USERNAME: "${{ secrets.DOCKERHUB_USERNAME }}"
