--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,34 @@
 name: CI
 
-on: [push]
+on:
+  push:
+    paths-ignore:
+      - 'workflows/**'
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: docker build . --file Dockerfile
+      - run: docker build .
 
   deploy-to-production:
+    defaults:
+      run:
+          shell: bash
+    env:
+      IMAGENAME: terraform-sops
+      PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+      USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
     if: endsWith(github.ref, 'master') == true
     needs: [test]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: bash ./ci-deploy.bash
-        env:
-          PASSWORD: "${{ secrets.DOCKERHUB_PASSWORD }}"
-          USERNAME: "${{ secrets.DOCKERHUB_USERNAME }}"
+      - run: echo "::set-env name=VERSION::$(date +'%Y-%m-%dT%H-%M-%S')"
+      - run: echo "${PASSWORD}" | docker login --username ${USERNAME} --password-stdin
+      - run: docker build . --file Dockerfile --tag temp-image
+      - run: docker tag temp-image ${USERNAME}/${IMAGENAME}:${VERSION}
+      - run: docker tag temp-image ${USERNAME}/${IMAGENAME}:latest
+      - run: docker push ${USERNAME}/${IMAGENAME}:${VERSION}
+      - run: docker push ${USERNAME}/${IMAGENAME}:latest
