--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,3 +3,9 @@ version: '3.8'
 services:
   app:
     build: .
+    environment:
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+      AWS_PROFILE: ${AWS_PROFILE}
+      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+    volumes:
+      - ./:/app
