--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,34 +1,29 @@
-name: CI
+name: CICD
 
-on:
-  push:
-    paths-ignore:
-      - '.github/**'
+defaults:
+  run:
+    shell: bash
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: docker build . --file Dockerfile
+      - run: docker-compose build
 
   deploy-to-production:
-    defaults:
-      run:
-          shell: bash
-    env:
-      IMAGENAME: terraform-sops
-      PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
-      USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
     if: endsWith(github.ref, 'master') == true
     needs: [test]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - run: echo "::set-env name=VERSION::alpine-$(date +'%Y-%m-%dT%H-%M-%S')"
-      - run: echo "${PASSWORD}" | docker login --username ${USERNAME} --password-stdin
-      - run: docker build . --file Dockerfile --tag temp-image
-      - run: docker tag temp-image ${USERNAME}/${IMAGENAME}:${VERSION}
-      - run: docker tag temp-image ${USERNAME}/${IMAGENAME}:latest
-      - run: docker push ${USERNAME}/${IMAGENAME}:${VERSION}
-      - run: docker push ${USERNAME}/${IMAGENAME}:latest
+      - run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+      - run: docker-compose build && docker-compose push
+        env:
+          VERSION: ${VERSION}
+
+on:
+  push:
+    paths-ignore:
+      - '.github/**'
