--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
       - run: docker-compose build && docker-compose push
         env:
-          VERSION: ${VERSION}
+          VERSION: ${{ env.VERSION }}
 
 on:
   push:
